2005-02-13  Janne Jalkanen  <Janne.Jalkanen@ecyrd.com>

        * v2.1.147

        * Fixed problem with an extra <script> tag inside cssinclude.js

2005-01-31  Janne Jalkanen  <Janne.Jalkanen@ecyrd.com>

        * v2.1.146.

        * Added ShortURLConstructor, though it does not work...  Except for
        VIEW.

        * Added BaseURL tag (just to make things a bit easier for template
        writers).

2005-01-28  Janne Jalkanen  <Janne.Jalkanen@ecyrd.com>

        * v2.1.145.

        * createContext() now prevents non-wikinames to be created.  This
        may fix a bunch of potential problems.

        * FilterManager.addPageFilter() now does a bit of a sanity check.

2005-01-26  Janne Jalkanen  <Janne.Jalkanen@ecyrd.com>

        * v2.1.144.

        * Oops, LinkToTag used accidentally ATTACH instead of VIEW...

2005-01-25  Janne Jalkanen  <Janne.Jalkanen@ecyrd.com>

        * v2.1.143.

        * PingWeblogsComFilter now actually accepts a parameter where to ping.

        * All tags and code were moved to the new standard.

        * Had a major revelation and moved the URL generation subroutines from
        WikiEngine to WikiContext.  This had to be done or else there would be
        no way to change how the URLs are generated in different contexts, such
        as RSS generation or XML-RPC.  This also means WikiEngine.getViewURL()
        is now deprecated (please use WikiContext.getViewURL(), WikiContext.getURL())
        instead.

        * Added 304 check to atom.jsp as well.

2005-01-23  Janne Jalkanen  <Janne.Jalkanen@ecyrd.com>

        * v2.1.142.

        * Added 304 check to rss.jsp

        * Implemented IdeaGetWikiInstanceByServletContext by (I lost the 
        email, sorry)

        * v2.1.141.

        * You may now set the URLConstructor instance by using
        jspwiki.urlConstructor parameter.

        * rss.jsp had a typo and would not compile, oops...

        * Almost all hard-coded references to URLs are now handled by an