@@ -25,17 +25,13 @@ import javax.servlet.http.HttpSession;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.Cookie;
-import java.security.Principal;
 import org.apache.log4j.Logger;
 import com.ecyrd.jspwiki.WikiEngine;
-import com.ecyrd.jspwiki.NoRequiredPropertyException;
 import com.ecyrd.jspwiki.TextUtil;
 import com.ecyrd.jspwiki.WikiException;
 import com.ecyrd.jspwiki.TranslatorReader;
 import com.ecyrd.jspwiki.util.ClassUtil;
 import com.ecyrd.jspwiki.util.HttpUtil;
-
-import com.ecyrd.jspwiki.auth.modules.*;
 
 /**
  *  Manages user accounts, logins/logouts, passwords, etc.
