@@ -22,7 +22,6 @@ package com.ecyrd.jspwiki.forms;
 
 import com.ecyrd.jspwiki.*;
 import com.ecyrd.jspwiki.plugin.WikiPlugin;
-import java.util.*;
 
 /**
  */
